# spotify-now-playing-telegram

./: .env  .env.sample  .gitignore  Dockerfile  LICENSE  README.md  bot_callbacks.py  bot_handlers.py  captain-definition  config.ini.example  docker-compose.yaml  models.py  pyproject.toml  requirements.txt  run.py  spotify_client.py  utils.py  web_views.py
bot/: callbacks.py  handlers.py  models.py  utils.py
bot/bpm_gifs/: gif_handler.py
bot/bpm_gifs/generator/: adjust_video.py  get_video_frame.py  presets.py
bot/utils/: build_gif_inlines.py  check_for_song.py  config.py  format_song.py  login_prompt.py  user_get_from_update.py
spotify/: client.py
web/: views.py
